--- a/dk_snippets/web/css/ui.css
+++ b/dk_snippets/web/css/ui.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "./requests.css";
+@import "./hints.css";
 
 :root {
     --gradient-background: linear-gradient(
@@ -102,4 +103,12 @@ body {
   margin: 0;
   font-weight: 100;
   font-size: 0.8rem;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
 }
